Fixed a UI bug that made the buttons jump a little when hovering

--- a/assets/scss/custom-style.scss
+++ b/assets/scss/custom-style.scss
@@ -85,6 +85,7 @@ body {
   color: $white;
   text-decoration: none;
   text-transform: uppercase;
+  border: 1px solid transparent;
 
   &--primary {
     background-color: #3a0ca3;
